tests/errors/empty.pyx
# cython: autotestdict=False
# mode: error
